--- a/public/404.html
+++ b/public/404.html
@@ -31,11 +31,10 @@
     <title>Chapar</title>
     <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A Lightweight, Modern Documentation Theme for Hugo" />
-    <meta name="keywords" content="Documentation, Hugo, Hugo Theme, Bootstrap" />
-    <meta name="author" content="Colin Wilson - Lotus Labs" />
-    <meta name="email" content="support@aigis.uk" />
-    <meta name="website" content="https://lotusdocs.dev" />
+    <meta name="description" content="Chapar is a api testing tools build with golang" />
+    <meta name="keywords" content="Restful, grpc, api, testing" />
+    <meta name="author" content="Mohsen Mirzakhani" />
+    <meta name="website" content="https://chapar.rest" />
     <meta name="Version" content="v0.1.0" />
     
     <link rel="icon" href="http://localhost:1313/favicon.ico" sizes="any">
