--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
                 <ul class="navigation-menu nav-right">
                     <li><a href="/docs/">Docs</a></li>
                     
-                    <li><a href="https://github.com/mirzakhany/chapar/discussions">Community</a></li>
+                    <li><a href="https://github.com/mirzakhany/chapar">GitHub</a></li>
                     
                 </ul>
             </div>
